<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:scrollbars="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="7dp"
            android:background="@color/Background"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/txt101"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/namaDpn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                    <EditText
                        android:id="@+id/ETnamaDpn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt102"
                        android:paddingTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/namaBlkng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/ETnamaBlkng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt103"
                        android:paddingTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TmpL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4">

                    <EditText
                        android:id="@+id/ETtmptL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:hint="@string/txt104"
                        android:paddingTop="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <EditText
                        android:id="@+id/ETdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:hint="@string/txt105"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/almt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ETalmt"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:hint="@string/txt106"
                    android:paddingTop="10dp"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/txt107" />

            <RadioGroup
                android:id="@+id/RGjk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt108" />

                <RadioButton
                    android:id="@+id/pr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt109" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/txt110" />

            <RadioGroup
                android:id="@+id/RG1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/islam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt111" />

                <RadioButton
                    android:id="@+id/kristen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt112" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/RG2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/katolik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt113" />

                <RadioButton
                    android:id="@+id/hindu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt114" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/RG3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buddha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt115" />

                <RadioButton
                    android:id="@+id/konghucu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt116" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/RG4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/aliran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="ChooseRB"
                    android:paddingTop="10dp"
                    android:text="@string/txt117" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ETtlp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt118"
                    android:inputType="number"
                    android:paddingTop="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ETemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt119"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ETpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt120"
                    android:inputType="textPassword"
                    android:paddingTop="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ETpassUlang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt121"
                    android:inputType="textPassword"
                    android:paddingTop="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="50dp"
                android:paddingBottom="50dp">

                <Button
                    android:id="@+id/Btnkembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/txt122" />

                <Button
                    android:id="@+id/Btndaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:paddingTop="10dp"
                    android:text="@string/txt123" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>