<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="7dp"
        android:layout_marginVertical="7dp"
        android:background="@color/Background"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/t101"
            android:textSize="14pt"
            android:textStyle="normal|bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t102"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TvnamaDpn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12pt" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/t103"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/TvnamaBlkng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t104"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/TvTTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t105"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/Tvalmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t106"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/Tvjk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t107"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/Tvagama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t108"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/TvTlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t109"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/Tvemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnKeluar"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/button"
                android:text="@string/b111"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnOke"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/button"
                android:text="@string/b112"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>